--- a/MinecraftLauncher/packages.config
+++ b/MinecraftLauncher/packages.config
@@ -2,9 +2,12 @@
 <packages>
   <package id="CommonServiceLocator" version="1.2" targetFramework="net45" />
   <package id="HtmlAgilityPack" version="1.4.8" targetFramework="net45" />
+  <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="MvvmLight" version="4.2.30.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="4.3.31.1" targetFramework="net45" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
+  <package id="this.Log" version="0.0.3.0" targetFramework="net45" />
+  <package id="this.Log-log4net" version="0.0.3.0" targetFramework="net45" />
 </packages>
